exports[`Message component should render nothing when field is valid and no description is provided 1`] = `null`;

exports[`Message component should render provided description if the field is valid 1`] = `
<div
  className="help-block"
  role="status">
  My description
</div>
`;

exports[`Message component should render provided error message if the field is invalid 1`] = `
<div
  className="help-block"
  role="status">
  My error message
</div>
`;
